# decentral_perk

./: CanisterCalls.md  Cargo.toml  README.md  dfx.json  init.sh  package-lock.json  package.json  rust-toolchain.toml  start.sh  webpack.config.js
scripts/: initStores.sh  start.sh
src/decentral_perk/: Cargo.toml  api.rs  decentral_perk.did  decentral_perk.old.did  lib.rs  profile.rs  state.rs  types.rs  utils.rs
src/decentral_perk/api/: add_post.rs  get_posts.rs
src/decentral_perk_assets/: package-lock.json  package.json  rollup.config.js
src/decentral_perk_assets/assets/: main.css
src/decentral_perk_assets/public/: index.html  main.css
src/decentral_perk_assets/src/: App.svelte  index.html  index.js
src/decentral_perk_assets/src/components/: NavBar.svelte
src/decentral_perk_assets/src/components/PostDisplay/: PostDisplay.svelte
src/decentral_perk_assets/src/components/VendorCard/: VendorCard.svelte
src/decentral_perk_assets/src/routing/: Home.svelte  Router.svelte  VendorDashboard.svelte
src/decentral_perk_assets/src/stores/: auth.js  post.js  store.js  vendorStore.js
src/declarations/decentral_perk/: decentral_perk.did  decentral_perk.did.d.ts  decentral_perk.did.js  index.js
src/declarations/decentral_perk_assets/: index.js
src/declarations/internet_identity/: internet_identity.did.d.ts
src/internet_identity/: internet_identity.wasm
