[package]
name = "decentral_perk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.10"
ic-cdk = "0.3.3"
ic-cdk-macros = "0.3.3"
serde = "1.0"
